mysql 모듈 mysql2로 변경

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "node dist/bin/www.js"
   },
   "dependencies": {
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sanitize-html": "^2.7.0"
   }
 }
