--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "start": "node dist/bin/www.js"
   },
   "dependencies": {
-    "mysql2": "^2.3.3",
-    "sanitize-html": "^2.7.0"
+    "mysql2": "^2.3.3"
   }
 }
